Project description changed

--- a/Gelato.ipynb
+++ b/Gelato.ipynb
@@ -5,7 +5,7 @@
    "id": "fbb41bb8",
    "metadata": {},
    "source": [
-    "# Goal: Historical data about students' scores is provided. The goal is to build a predictive model to "
+    "### Goal: Historical data about students' pre and post test scores is provided. The goal is to build a machine learning model to predict post test scores"
    ]
   },
   {
